--- a/asian.html
+++ b/asian.html
@@ -6,7 +6,17 @@
     <title> A DAY IN THE LIFE </title>
   </head>
   <body>
-    <h1> You wake up in the morning. What race would you like to be today? </h1>
-    <button type="button" onclick="document.location.href = 'http://twinery.org'">ASIAN</button>
-    </body>
+    <h2> Good Morning!</h2>
+    <p3> You woke up a while ago and you mother is calling you to eat breakfast before heading to school. 
+    She your favorite simple rice porridge with peanuts, fried dough stick and soy milk for breakfast. 
+    Around 7 o'clock you left home to meet up with your friend to walk to school. 
+    Your friend asked you “How was your day going so far?” And you stated your breakfast. 
+    You explain to her what you ate but she was confused that whole time. So she asked you more and more questions about the food you eat for lunch and dinner. 
+    You said...</p3>
+    <br>
+    <br>
+    <button type="button" onclick="document.location.href = 'foreign-food.html'">The Foreign Food</button>
+
+    <button type="button" onclick="document.location.href = 'traditional-food.html'"> The Traditional Food </button>
+  </body>
 </html>
