--- a/reply.html
+++ b/reply.html
@@ -6,6 +6,6 @@
     <title> A DAY IN THE LIFE </title>
   </head>
   <body>
-    <h3> You say "Just chillling eating my sandwhich." The cops thinks your being smart with him and does a searches you all over. What do you do next?  </h3>
+    <h3> You say "Just chillling eating my sandwhich, what you been up to?" The cops thinks your being smart with him and dicides to search you all over. What do you do next?  </h3>
     <button type="button" onclick="document.location.href = 'getsearched.html'">GET SEARCHED</button>
     <button type="button" onclick="document.location.href = 'strugglewiththecop.html'">FIGHT THE COP OFF YOU</button>
