--- a/african.html
+++ b/african.html
@@ -6,7 +6,7 @@
     <title> A DAY IN THE LIFE </title>
   </head>
   <body>
-    <h2>You wake up,cleanse yourself and all that. You head out to get some breakfast. You order a bacon and egg sandwhich at the deli, ans tand outside while you eat it. A cop walks by and ask what you're doing there. What do you do?  </h2>
+    <h2>You wake up,cleanse yourself and all that. You head out to get some breakfast. You order a bacon and egg sandwhich at the deli, and stand outside while you eat it. A cop walks by and ask what you're doing there. What do you do?  </h2>
     <button type="button" onclick="document.location.href = 'reply.html'">REPLY</button>
      <button type="button" onclick="document.location.href = 'walkaway.html'">WALK AWAY</button>
   </body>
